Configure domain entities and ER models

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=.;Database=School;Integrated Security=True;"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=WeatherDb;Trust Server Certificate=true;MultipleActiveResultSets=true;"
   }
 }
