--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=(localdb)\\MSSQLLocalDB;Database=WeatherDb;Trust Server Certificate=true;MultipleActiveResultSets=true;"
+  },
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    },
+    "Clients": {
+      "TestWebApi.UI": {
+        "Profile": "IdentityServerSPA",
+        "RequirePkce": "false"
+      }
+    }
   }
 }
